# traceset

./: .claudeignore  .env.template  .gitignore  README.md  orchestrator.py  pyproject.toml  requirements.txt
agents/: base.py  company_researcher.py  competitor_mapper.py  sentinel_agent.py  strategic_analyst.py  trace_engine_agent.py
backend/: config.py  database.py  main.py
backend/models/: __init__.py  commit.py  paper.py  patent.py  trace.py
backend/routers/: commits.py  papers.py  patents.py  traces.py
backend/services/: github_watcher.py  patent_tracker.py  scholar_sync.py  trace_engine.py
dashboard/: app.py
schema/: init.sql
tests/: conftest.py  test_github_watcher.py  test_patent_tracker.py  test_scholar_sync.py  test_trace_engine.py
