[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceset"
version = "0.1.0"
description = "B2B competitive intelligence: link commits, papers, and patents."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
